--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPe3kvfvifrnVwzOKTeb/Qp",
+      "authorship_tag": "ABX9TyOXD9qQCjcLKyA461P9ig7R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4026,7 +4026,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "3a7c8e43-4aa0-44af-98b0-cc347f007f37"
+        "outputId": "e54c2713-c74b-4412-f670-ae38ca083da2"
       },
       "execution_count": 1,
       "outputs": [
@@ -4048,7 +4048,7 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "27bc76d4-5e74-4b8d-a1ac-fd049b4ec7ae",
+        "outputId": "ff09a00e-5fa5-4fbb-c4a5-c338d415da4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4153,7 +4153,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "de0be0c4-b483-48e0-c20e-a41f780e6797"
+        "outputId": "f4053006-1a8a-4691-9b9a-87ba67604747"
       },
       "execution_count": 5,
       "outputs": [
@@ -4161,10 +4161,10 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:00<00:00, 37.2MB/s]\n",
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 1.18MB/s]\n",
-            "100%|██████████| 1.65M/1.65M [00:00<00:00, 8.63MB/s]\n",
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 5.11MB/s]\n"
+            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.46MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 160kB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.51MB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 8.21MB/s]\n"
           ]
         }
       ]
@@ -4176,7 +4176,7 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "ffd92229-f9bc-4516-81b6-b08031792e46",
+        "outputId": "eb09980d-0917-4bf5-b989-cd1cb6aa24c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4213,7 +4213,7 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "5d7bd8b1-ddfe-4b13-b577-e77b4edcdc93",
+        "outputId": "c11d28e2-a74c-4ef3-9d6d-ed70c5f85b4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4257,7 +4257,7 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "e793e28e-a132-47e3-9569-b16e9222b219",
+        "outputId": "92c60e70-baeb-41e3-b3ce-106133566877",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4298,7 +4298,7 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "fd2ce700-fdec-4477-9d52-2864dc6f745f",
+        "outputId": "499e4ea2-9250-45ea-ba74-65eff5969934",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
@@ -4348,7 +4348,7 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "641f19fd-818e-45be-dfde-31da886ddeab",
+        "outputId": "6c7ac26d-701c-41e9-803e-36d3b7eff040",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
@@ -4480,7 +4480,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32j9kVj0E_fJ",
-        "outputId": "19bae70c-a7d9-4319-c721-03a8cd1df5fd"
+        "outputId": "63232182-8928-4128-8011-7aada4f804a9"
       },
       "execution_count": 14,
       "outputs": [
@@ -4537,9 +4537,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Ys8QFSfHVzK",
-        "outputId": "f398ca5b-bd04-4c82-860f-8bfefa01102c"
+        "outputId": "760dd721-57d9-4197-e687-334a31461b43"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4549,7 +4549,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -4565,9 +4565,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZujlMZ1vH2rV",
-        "outputId": "416ef6ac-f8b5-4cf8-c87e-98060d097b81"
+        "outputId": "0c5ba571-89a3-4bae-c688-f267a088dcea"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4578,7 +4578,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -4595,9 +4595,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lqCx_J6zPrKa",
-        "outputId": "919a86c3-acf2-4fe5-b138-3870431714c9"
+        "outputId": "7e2b425f-411b-4b6a-e3b5-4f6e97f1dad8"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -5165,7 +5165,7 @@
         "fig, ax = plot_confusion_matrix(conf_mat = conf_matrix_tensor.numpy(),\n",
         "                                figsize = (10, 7),\n",
         "                                class_names = mnist_test.classes\n",
-        "                                )"
+        "                                );"
       ],
       "metadata": {
         "colab": {
@@ -5190,8 +5190,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Q12: Playing around with the convolution network"
+      ],
+      "metadata": {
+        "id": "r5F8XuQeddB7"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "t = torch.rand()"
+      ],
       "metadata": {
         "id": "bivZpkr8kkFj"
       },
