--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOXD9qQCjcLKyA461P9ig7R",
+      "authorship_tag": "ABX9TyPQW55GYH1F1/sRjYDGTwiq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5201,10 +5201,54 @@
     {
       "cell_type": "code",
       "source": [
-        "t = torch.rand()"
+        "torch.manual_seed(101)\n",
+        "\n",
+        "t = torch.rand(size = (1,3,64,64), device = device)\n",
+        "t.shape"
       ],
       "metadata": {
-        "id": "bivZpkr8kkFj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bivZpkr8kkFj",
+        "outputId": "9416eb1f-3154-4fc8-927a-f6ab448508c9"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 3, 64, 64])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv_layer = nn.Conv2d(in_channels = 3,\n",
+        "                       out_channels = 10,\n",
+        "                       kernel_size = 3,\n",
+        "                       padding = 0,\n",
+        "                       stride = 1)"
+      ],
+      "metadata": {
+        "id": "vAzojA2QlSe3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv_layer(t).shape"
+      ],
+      "metadata": {
+        "id": "pFYLGqjN6ZG9"
       },
       "execution_count": null,
       "outputs": []
