--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWpPkQODkNDqGudJYn0SrO",
+      "authorship_tag": "ABX9TyN/p1+bJeSezHwKDTTMZcZ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5192,8 +5192,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Q13: New Model"
+      ],
+      "metadata": {
+        "id": "KKJU9cM4WVVK"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class MNISTModel_(nn.Module):\n",
+        "\n",
+        ""
+      ],
       "metadata": {
         "id": "CHKPlJ4uVlb9"
       },
