--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/p1+bJeSezHwKDTTMZcZ6",
+      "authorship_tag": "ABX9TyOv9I4ZZTauF9AhgF3F28jO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4418,7 +4418,7 @@
         "\n",
         "    self.block1 = nn.Sequential(\n",
         "        nn.Conv2d(in_channels = in_shape,\n",
-        "                  out_channels = out_shape,\n",
+        "                  out_channels = hidden_units,\n",
         "                  kernel_size = 3,\n",
         "                  stride = 1,\n",
         "                  padding = 1),\n",
@@ -5205,7 +5205,18 @@
       "source": [
         "class MNISTModel_(nn.Module):\n",
         "\n",
-        ""
+        "  def __init__(self, in_shap:int, hidden_units:int, out_shape:int):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.block1 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels = in_shape,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  padding = 1,\n",
+        "                  stride = 1\n",
+        "                  ),\n",
+        "        nn.\n",
+        "    )"
       ],
       "metadata": {
         "id": "CHKPlJ4uVlb9"
