--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOv9I4ZZTauF9AhgF3F28jO",
+      "authorship_tag": "ABX9TyPr1fKUsyDpTWMaeoVMKfqz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5213,10 +5213,24 @@
         "                  out_channels = hidden_units,\n",
         "                  kernel_size = 3,\n",
         "                  padding = 1,\n",
-        "                  stride = 1\n",
-        "                  ),\n",
-        "        nn.\n",
-        "    )"
+        "                  stride = 1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels = in_shape,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  padding = 1,\n",
+        "                  stride),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(2)\n",
+        "    )\n",
+        "\n",
+        "    self.classifier = nn.Sequential(\n",
+        "        nn.Flatten(),\n",
+        "        nn.Linear(in_features = hidden_units*7*7,\n",
+        "                  out_features = out_shape)\n",
+        "    )\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "CHKPlJ4uVlb9"
