--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPr1fKUsyDpTWMaeoVMKfqz",
+      "authorship_tag": "ABX9TyPYbQANQj6OaJ5U7JP7UN/b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5202,6 +5202,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UvMI1igKwGh1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "class MNISTModel_(nn.Module):\n",
         "\n",
@@ -5230,10 +5239,26 @@
         "                  out_features = out_shape)\n",
         "    )\n",
         "\n",
-        ""
+        "  def forward(self, X:torch.tensor):\n",
+        "    return self.classifier(self.block1(x))"
       ],
       "metadata": {
         "id": "CHKPlJ4uVlb9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(101)\n",
+        "\n",
+        "mnist_model_ = MNISTModel_(\n",
+        "    in_channels = 1\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "oe2gzOuEu_9s"
       },
       "execution_count": null,
       "outputs": []
