--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPYbQANQj6OaJ5U7JP7UN/b",
+      "authorship_tag": "ABX9TyPNTStXua9ydMLS8q+kPQUC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4028,7 +4028,7 @@
         "id": "7lmqTB7wDiOU",
         "outputId": "834b307a-784d-4b48-ffa7-a11cfe6287d9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4053,7 +4053,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4072,7 +4072,7 @@
       "metadata": {
         "id": "ivcjmWyvsa_T"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4126,7 +4126,7 @@
       "metadata": {
         "id": "eNPwJm51saxP"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4155,7 +4155,7 @@
         },
         "outputId": "a75417d9-52a0-4e00-d99b-0b4b66824d8a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4181,7 +4181,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4218,7 +4218,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4262,7 +4262,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4284,7 +4284,7 @@
       "metadata": {
         "id": "dJXALRO9-34m"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4304,7 +4304,7 @@
           "height": 470
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4354,7 +4354,7 @@
           "height": 222
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4553,7 +4553,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4584,7 +4584,7 @@
       "metadata": {
         "id": "WuVJReKtp6Fc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4600,7 +4600,7 @@
       "metadata": {
         "id": "X7yhVmFKXmZn"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4673,7 +4673,7 @@
         },
         "outputId": "024b809a-6f54-4990-e365-3f0e534dc91b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4874,7 +4874,7 @@
       "metadata": {
         "id": "Luly_dpEPaAn"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4885,7 +4885,7 @@
       "metadata": {
         "id": "9BbogOXwQlhB"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4916,7 +4916,7 @@
         },
         "outputId": "d8243a87-b10c-4af3-c85d-57eddf62b246"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4971,7 +4971,7 @@
         },
         "outputId": "b52f491d-4a33-4d39-9b1b-d86755865a8b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5011,7 +5011,7 @@
         },
         "outputId": "2db1d62e-1cc5-41f4-f9e9-57b47c0babeb"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5045,7 +5045,7 @@
         },
         "outputId": "ba0abba3-8a35-4f1c-81f3-c7b1138bb09d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5066,7 +5066,7 @@
       "metadata": {
         "id": "gTfAde0TYbQ0"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5079,7 +5079,7 @@
       "metadata": {
         "id": "phPGoomhaMlR"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5098,7 +5098,7 @@
         "id": "vKGoo8EBWVv3",
         "outputId": "effe602f-da0f-40b2-ac32-ed4b83cf1c42"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5136,7 +5136,7 @@
         "id": "bivZpkr8kkFj",
         "outputId": "69d03fb4-275a-4608-b941-363414e984b3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5162,7 +5162,7 @@
       "metadata": {
         "id": "vAzojA2QlSe3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5177,7 +5177,7 @@
         "id": "pFYLGqjN6ZG9",
         "outputId": "de0b566b-b9cc-4678-ca71-2bf5f8415e80"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5194,7 +5194,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Q13: New Model"
+        "### Q13: New FashionMNIST Model"
       ],
       "metadata": {
         "id": "KKJU9cM4WVVK"
@@ -5202,9 +5202,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "fmnist_train = tv.datasets.FashionMNIST(\n",
+        "    root = \"data\",\n",
+        "    download = True,\n",
+        "    train = True,\n",
+        "    transform = tv.transforms.ToTensor(),\n",
+        "    target_transform = None\n",
+        ")\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "UvMI1igKwGh1"
+        "id": "7duqxFbIeiSR"
       },
       "execution_count": null,
       "outputs": []
