--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOnJEEqo2SUyBDYq77q8ELu",
+      "authorship_tag": "ABX9TyMyjvJG1l/VO477z2eKKtXr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5335,12 +5335,17 @@
         "    batch_size= 32,\n",
         "    shuffle = True\n",
         ")\n",
-        "\n"
+        "\n",
+        "fmnist_test_dataloader = torch.utils.data.DataLoader(\n",
+        "    fmnist_test,\n",
+        "    batch_size = 32,\n",
+        "    shuffle = False\n",
+        ")"
       ],
       "metadata": {
         "id": "1sTL17_vGmEh"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -5453,7 +5458,19 @@
         "\n",
         "EPOCHS = 3\n",
         "\n",
-        "for epoch in tqdm(range(EPOCHS)):"
+        "for epoch in tqdm(range(EPOCHS)):\n",
+        "\n",
+        "  ### Training Loop ###\n",
+        "\n",
+        "  train_loss = 0\n",
+        "\n",
+        "  for batch, (X,y) in enumerate(fmnist_train_dataloader):\n",
+        "\n",
+        "    fmnist_model.train()\n",
+        "\n",
+        "    X, y = X.to(device), y.to(device)\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "wR7efm52d56v"
