--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMyjvJG1l/VO477z2eKKtXr",
+      "authorship_tag": "ABX9TyO3KDCqzGuGNNbAw0OYkNQM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5469,6 +5469,13 @@
         "    fmnist_model.train()\n",
         "\n",
         "    X, y = X.to(device), y.to(device)\n",
+        "\n",
+        "    # Forward Pass\n",
+        "    train_pred = fmnist_model(X)\n",
+        "\n",
+        "    # Loss Calculation\n",
+        "    loss = loss_fn(train_pred, y)\n",
+        "    train_loss += loss\n",
         "\n",
         ""
       ],
