--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO3KDCqzGuGNNbAw0OYkNQM",
+      "authorship_tag": "ABX9TyOOofbfzDIsvAprnFYC22db",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5454,6 +5454,22 @@
     {
       "cell_type": "code",
       "source": [
+        "loss_fn = nn.CrossEntropy()\n",
+        "\n",
+        "optimizer = torch.optim.SGD(\n",
+        "    params = fmnist_model.parameters(),\n",
+        "    lr = 0.1\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "ZVRnetmCkYtX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "%%time\n",
         "\n",
         "EPOCHS = 3\n",
@@ -5476,6 +5492,17 @@
         "    # Loss Calculation\n",
         "    loss = loss_fn(train_pred, y)\n",
         "    train_loss += loss\n",
+        "\n",
+        "    # Zero Gradient\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    # Backprobagation\n",
+        "    loss.backward()\n",
+        "\n",
+        "    # Optimizer step\n",
+        "    optimizer.step()\n",
+        "\n",
+        "  train_loss = len(fmnist_train_dataloader)\n",
         "\n",
         ""
       ],
