--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3eGXhSM/PgmjTh0nyBX9Z",
+      "authorship_tag": "ABX9TyOWpe8S/LHpX67EP2cwU3zM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5609,10 +5609,49 @@
         "for sample,label in random.sample(list(fmnist_test), k = 6):\n",
         "  test_samples.append(sample)\n",
         "  test_labels.append(label)\n",
-        "\n"
+        "\n",
+        "pred_probs = make_predictions(fmnist_model, test_samples, device)\n",
+        "print(pred_probs)\n",
+        "pred_classes = pred_probs.argmax(dim=1)\n",
+        "print(f\"\\n{pred_classes}\\n{test_labels}\")"
       ],
       "metadata": {
-        "id": "qujUaDSF7jJL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qujUaDSF7jJL",
+        "outputId": "2d07b243-4862-43ba-a8d2-95b021c81090"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[8.7064e-05, 3.7734e-05, 3.8990e-05, 2.5834e-05, 1.9593e-04, 1.9309e-03,\n",
+            "         2.3690e-04, 5.8596e-02, 1.0367e-03, 9.3781e-01],\n",
+            "        [5.0878e-06, 9.4768e-06, 6.6710e-07, 1.7622e-05, 1.2307e-06, 1.0830e-03,\n",
+            "         3.4179e-06, 9.9859e-01, 2.9569e-05, 2.5978e-04],\n",
+            "        [3.4051e-06, 3.1716e-06, 2.8060e-07, 3.2556e-08, 1.8841e-06, 9.9868e-01,\n",
+            "         2.7432e-05, 8.9225e-07, 3.5780e-05, 1.2501e-03],\n",
+            "        [1.1537e-02, 1.1948e-03, 1.4873e-01, 5.3178e-03, 8.2339e-01, 1.2808e-05,\n",
+            "         6.9318e-03, 5.6923e-07, 2.8914e-03, 8.6200e-07],\n",
+            "        [9.7738e-01, 2.1058e-05, 3.1566e-03, 1.0597e-04, 1.2525e-05, 8.2863e-07,\n",
+            "         1.9259e-02, 1.5664e-06, 5.1461e-05, 8.4313e-06],\n",
+            "        [9.8098e-01, 3.2030e-05, 2.5390e-04, 2.4217e-04, 9.3859e-06, 8.6920e-07,\n",
+            "         1.8449e-02, 3.1363e-07, 2.7654e-05, 1.4939e-07]])\n",
+            "\n",
+            "tensor([9, 7, 5, 4, 0, 0])\n",
+            "[9, 7, 5, 4, 0, 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Y5XqfhcAKtd6"
       },
       "execution_count": null,
       "outputs": []
